<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- main -->
    <string name="title_btn_Main_Home">主页</string>
    <string name="title_btn_Dialog">对话框示例</string>
    <string name="title_btn_Main_SqlLite">SqlLite</string>
    <string name="title_btn_Main_Sys_Action">Tab选项卡</string>

    <!-- color -->
    <string name="color">颜色</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>

    <!-- 对话框示例 -->
    <string name="title_btn_Dialog_example_Normal">普通对话框</string>
    <string name="title_btn_Dialog_example_TxtInput">输入对话框</string>
    <string name="title_btn_Dialog_example_RdiSelect">单选对话框</string>
    <string name="title_btn_Dialog_example_MuliSelect">多选对话框</string>
    <string name="title_btn_Dialog_example_SimpleSelect">简单选择对话框</string>
    <string name="title_btn_Dialog_example_UserDefine">自定义对话框</string>

    <!-- Sys_Action -->
    <string name="title_activity_sys_action">调用系统Action</string>
    <string name="title_btn_sys_action_Select">自定义对话框</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_fram_exa">FramExaActivity</string>
    <string name="title_activity_surface_view">SurfaceViewActivity</string>
    <string name="title_activity_img_draw_user_draw">绘画</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Surface View -->
    <string name="title_cirecle">圆</string>
    <string name="title_square">四边形</string>
    <string name="title_rect">正方形形</string>
    <string name="title_activity_img_draw_index">图形与图像处理</string>
    <string name="title_activity_img_draw_path_test">路径动画</string>
    <string name="title_activity_img_draw_text">文本动画</string>
    <!-- Button -->
    <string name="title_btn_ImgDrawIndex_PathTest">Path Test</string>
    <string name="title_btn_ImgDrawIndex_BasciRect">基础形</string>
    <string name="title_btn_ImgDrawIndex_Text">文本动画</string>
    <string name="title_btn_btnPinbal_Text">乒乓球</string>

    <!-- ImgDrawUserDraw -->
    <string name="title_btn_UserDraw_Text">画线</string>
    <string name="width">线宽度</string>
    <string name="width_1">1</string>
    <string name="width_3">3</string>
    <string name="width_5">5</string>
    <string name="blur">blur</string>
    <string name="emboss">emboss</string>
    <string name="title_activity_img_draw_pinbal">ImgDrawPinbalActivity</string>

    <!-- title_btn_sql_lite_dict -->
    <string name="title_btn_sql_lite_dict_Insert">写入</string>
    <string name="title_btn_sql_lite_dict_Read">读取</string>

    <!-- sql lite -->
    <string name="title_activity_sql_lite_index">数据库操作</string>
    <string name="title_activity_sql_lite_dict">数据库记事本</string>
    <string name="title_btn_SqlLite_Ditc">生词本</string>
    <string name="title_activity_list_on_long_click">ListOnLongClickActivity</string>

    
    <!-- Mulitichoice -->
    <string name="menu_select_all">Select all</string>
    <string name="menu_reset_list">Reset list</string>
    <string name="menu_share">Share</string>
    <string name="menu_discard">Discard</string>
    <string name="activity_title_array_adapter">ArrayAdapter sample</string>
    <string name="activity_title_array_adapter_two_lines">ArrayAdapter sample (two lines)</string>
    <string name="activity_title_base_adapter">Base adapter sample</string>
    <string name="activity_title_simple_cursor_adapter">SimpleCursorAdapter sample</string>
    <string name="activity_title_grid">GridView sample</string>
    <string name="activity_title_gallery">Gallery sample</string>
    <string name="activity_title_header">Header sample</string>
    <string name="activity_title_many_items">Long list sample</string>
    <string name="activity_title_complex_item_layout">Complex item layout sample</string>
    <string name="activity_title_alphabet_indexer">AlphabetIndexer sample</string>
    <string name="activity_title_non_checkable_items">Non-checkable items sample</string>
    <string name="header_text">Header view</string>
</resources>
