<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_social_share"
        android:showAsAction="always"
        android:title="@string/menu_share"/>
 
    <item
        android:id="@+id/menu_discard"
        android:icon="@drawable/ic_content_discard"
        android:showAsAction="always"
        android:title="@string/menu_discard">
	        <menu >
	            <group>
	                <item 
	                    android:id="@+id/width_1" 
	                    android:icon="@drawable/ic_content_discard"
	                    android:title="@string/width_1"/>
	                <item android:id="@+id/width_3" android:title="@string/width_3"/>
	                <item android:id="@+id/width_5" android:title="@string/width_5"/>
	            </group>
	        </menu>
       </item>
 	
</menu>