<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ImgDrawIndexActivity" >

    <Button
		android:id="@+id/btn_BasicView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_marginTop="15dp"
		android:text="@string/title_btn_ImgDrawIndex_BasciRect" />
    
    <Button
	      android:id="@+id/btnPathTest"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_below="@+id/btn_BasicView"
	      android:text="@string/title_btn_ImgDrawIndex_PathTest" />
    
    <Button
	      android:id="@+id/btnTextView"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_below="@+id/btnPathTest"
	      android:text="@string/title_btn_ImgDrawIndex_Text" />
    
	<Button
	      android:id="@+id/btnUserDraw"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_below="@+id/btnTextView"
	      android:text="@string/title_btn_UserDraw_Text" />
	<Button
	      android:id="@+id/btnPinbal"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_below="@+id/btnUserDraw"
	      android:text="@string/title_btn_btnPinbal_Text" />
</RelativeLayout>
